test/tests/compiler/18_structures/invalid_types/extra_credit/union_initializers/initializer_too_long.plx
#  A union initializer must always have exactly one element,
#  * no matter how many members the union has.
#  

type union u(    a: i32    , b: i64    
    )

pub fn main(none) i32 {
    x: union u = $(1, 2) #  invalid - multiple initializers
    return 0
}

